      EPSON Stylus CX4700
      EPSON Stylus CX4800
      EPSON Stylus CX5700
      EPSON Stylus CX5800
      EPSON Stylus CX7700
      EPSON Stylus CX7800
      EPSON Stylus DX4200
      EPSON Stylus DX4250
      EPSON Stylus DX4800
      EPSON Stylus DX4850
      EPSON PX A650

   2) Printing at standard and draft quality to the Epson Stylus Photo
      R1900 has been corrected.

   3) An Italian translation has been added.

   4) Builds using the VPATH feature, allowing building outside of the
      source tree, have been fixed.  This has no user-visible
      implications, but it may have implications to distributors
      building Gutenprint.


================================================================

IV) OVERALL CHANGES FROM 5.0.2 TO 5.2

A) GENERAL USER-VISIBLE CHANGES

   1) Gutenprint 5.2 and beyond no longer support GIMP 1.2.  Please
      ensure that you are using GIMP 2.0 or above.

   2) Gutenprint 5.2 no longer supports Macintosh OS X 10.2; it now
      requires 10.3 (Panther) or higher.  This is due to a new library
      requirement (for the iconv library) that is not present in 10.2.

   3) Color Correction is now shown on the basic output adjustment
      menu rather than the advanced menu.

   4) We recommend that any profiles created against Gutenprint 5.1 or
      earlier releases be checked, and if necessary, re-created for
      use with Gutenprint 5.2.


B) NEW FUNCTIONALITY

   1) The PostScript driver has been rewritten, offering enhanced
      functionality approaching that of the native printer drivers.
      This driver is used by the enhanced Print plugin for the GIMP,
      and by other packages (such as PhotoPrint) that utilize
      Gutenprint.  In particular, the following specific functionality
      has been added:

      - All PPD file options are now offered.

      - CMYK input is now handled correctly.

      - The PostScript driver recognizes Gutenprint PPD files (from